fix: fix spacing for report list page

--- a/src/app/reportsList/reportsList.component.scss
+++ b/src/app/reportsList/reportsList.component.scss
@@ -10,6 +10,7 @@ section {
   grid-template-columns: repeat(auto-fit, 280px);
   justify-content: center;
   gap: 15px;
+  margin-top: 40px;
 }
 
 .card-clickable {
